Made initial classes.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Template</title>
+        <title>SGJCH15</title>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script src="entity.js"></script>
     </head>
     <body>
-        A demonstration of a HTML5 game loop. I hereby release this into the public domain or its nearest equivalent.<br>
         <canvas width="800" height="600" id="gameCanvas"></canvas>
         <script>
 
