--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <script src="action.js"></script>
         <script src="drawmap.js"></script>
     </head>
-    <body>
-        <canvas width="800" height="600" id="gameCanvas"></canvas>
+    <body style="background: #222222;">
+        <div style="margin: 0 auto; width: 800px;"><canvas width="800" height="600" id="gameCanvas"></canvas></div>
         <script>
 
 /** THE GAME ITSELF **********************************************************/
@@ -21,18 +21,16 @@ var w = new World(50);
 var player = null;
 var started = false;
 
-w.fill([0.8, typeMap['grass'], 100, typeMap['rock']]);
-w.add(new Entity(new Type("player", "black", true, {}, function(e, world){
-    var neighbours = world.getNeighbours(e);
-    var grass = neighbours.filter(function (n) {
-        return n.get('x') == e.get('x') && n.get('y') == e.get('y') && n.type.name == 'grass';
-    });
-    if (grass.length > 0) {
-        grass = grass[0];
-        return [new ActionType('plant', false, '', 'new flower'), e, grass];
-    }
-    return null;
-}, function(){}), {'x': 7, 'y': 3}));
+var fillTypes = new Array();
+var fraction = 1.0 / types.length + 0.01;
+types.forEach(function(t) {
+    fillTypes.push(fraction);
+    fillTypes.push(t);
+});
+
+w.fill(fillTypes);
+var thePlayer = new Entity(new Type("player", "player", true, {}), {'x': 7, 'y': 3});
+w.add(thePlayer);
 
 function advanceWorld() {
     player = null;
@@ -79,7 +77,7 @@ function input(msSinceLastUpdate) {
 function update(msSinceLastUpdate) {}
 
 function draw() {
-    drawMap(c, w, 0, 0);
+    drawMap(c, w, thePlayer.get('x') - 5, thePlayer.get('y') - 6);
 }
 
 
