Fixed bug where player didn't show up after teleport.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ function input(msSinceLastUpdate) {
     }
     if (request) {
         if (keys['Y']) {
+            var opx = thePlayer.get('x');
+            var opy = thePlayer.get('y');
             runAction(request, w);
+            w.updateCellMembership(opx, opy);
             request = advanceWorld();
             keys['Y'] = false;
         } else if (keys['N']) {
