--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <script src="mapgen.js"></script>
     </head>
     <body style="background: #222222;">
-        <div style="margin: 0 auto; width: 800px;"><canvas width="800" height="600" id="gameCanvas"></canvas></div>
+        <div style="margin: 0 auto; width: 800px;"><canvas width="800" height="600" id="gameCanvas"></canvas>
+        <p><a href="about.html" style="color: white;">About</a></div>
         <script>
 
 /** THE GAME ITSELF **********************************************************/
