--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 <img src="img/dream1.png">
 <p>Last weekend, we - <a href="http://raeknowler.name/">Rae</a> and <a href="http://www.zarkonnen.com">David</a> - participated in the <a href="http://www.gamespace.ch/post/125425328044/summer-game-jam">Zurich&nbsp;Summer&nbsp;Game&nbsp;Jam</a>, a two-day jam organized by our friend <a href="http://kahlina.com/">Dragica</a>.</p>
 
-<p>You can play the game in its current state <a href="index.html">here</a>.</p>
+<p>You can play the game in its current state <a href="index.html">here</a>. If the game doesn't load or you get stuck, just reload the page.</p>
 </div>
 
 <div class="section">
